--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
