--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
     "next": "12.0.7",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
+    "@types/mdx-js__react": "^1.5.5",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.1",
