--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-context-menu": "^0.1.4",
     "@radix-ui/react-tooltip": "^0.1.6",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
