--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
-    "@radix-ui/react-context-menu": "^0.1.4",
     "@radix-ui/react-tooltip": "^0.1.6",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
@@ -18,13 +17,15 @@
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@types/remark-prism": "^1.3.0",
     "autoprefixer": "^10.4.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
