--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
     "@radix-ui/react-tooltip": "^0.1.6",
+    "chrome-aws-lambda": "^10.1.0",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
+    "playwright-core": "^1.17.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.5.0",
