--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-hover-card": "^0.1.3",
     "@radix-ui/react-tooltip": "^0.1.6",
     "chrome-aws-lambda": "^10.1.0",
     "gray-matter": "^4.0.3",
@@ -20,7 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.5.0",
-    "remark-prism": "^1.3.6"
+    "remark-prism": "^1.3.6",
+    "tailwindcss-radix": "^1.6.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
