--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.5.0",
-    "remark-prism": "^1.3.6",
+    "rehype-pretty-code": "^0.2.3",
+    "shiki": "^0.10.1",
     "tailwindcss-radix": "^1.6.0"
   },
   "devDependencies": {
